@@ -1,8 +1,4 @@
 buildscript {
-  repositories {
-    mavenLocal()
-    jcenter()
-  }
   dependencies {
     classpath("net.serenity-bdd:serenity-gradle-plugin:2.0.83")
     classpath("net.serenity-bdd:serenity-single-page-report:2.1.4")
@@ -19,12 +15,11 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.2.0'
   id 'uk.gov.hmcts.java' version '0.12.5'
+  id "info.solidsoft.pitest" version '1.5.1'
 }
 
 apply plugin: 'net.serenity-bdd.aggregator'
 apply from: 'liquibase.gradle'
-
-println 'checking = '
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
@@ -61,23 +56,37 @@ sourceSets {
   }
 }
 
+
+repositories {
+  mavenLocal()
+  mavenCentral()
+  jcenter()
+  maven { url 'https://jitpack.io' }
+}
+
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
 
-test {
-  finalizedBy jacocoTestReport
-  jacoco {
-    destinationFile = file("${project.rootDir}/build/jacoco/test.exec")
+tasks.withType(Test) {
+  useJUnitPlatform()
+  testLogging {
+    exceptionFormat = 'full'
   }
 }
 
 task functional(type: Test) {
   description = "Runs functional tests"
   group = "Verification"
+  include "uk/gov/hmcts/reform/refunds/functional/**"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+  enableAssertions = true
+  scanForTestClasses = true
 }
+
+// Serenity Reporting
+functional.finalizedBy(aggregate)
 
 task integration(type: Test) {
   description = "Runs integration tests"
@@ -89,16 +98,10 @@ task integration(type: Test) {
 
 task smoke(type: Test) {
   description = "Runs Smoke Tests"
+  useJUnitPlatform();
   testClassesDirs = sourceSets.smokeTest.output.classesDirs
   classpath = sourceSets.smokeTest.runtimeClasspath
   testLogging.showStandardStreams = true
-}
-
-tasks.withType(Test) {
-  useJUnitPlatform()
-  testLogging {
-    exceptionFormat = 'full'
-  }
 }
 
 pmd {
@@ -165,7 +168,6 @@ dependencyUpdates {
 
 dependencyCheck {
   suppressionFile = 'config/owasp/suppressions.xml'
-
 }
 apply from: "${rootDir}/cve-resolution-strategy.gradle"
 
@@ -193,10 +195,20 @@ def versions = [
   springBoot      : springBoot.class.package.implementationVersion,
   springfoxSwagger: '3.0.0',
   jacocoVersion: '0.8.5',
+  restAssured : '4.2.0',
   serenity                : '2.2.12',
   serenityreporter        : '2.1.4',
-  serenityCucumber        : '1.9.51'
+  serenityCucumber        : '1.9.51',
+  pitest         : '1.5.1',
+  gradlePitest   : '1.3.0',
+  sonarPitest    : '0.5'
 ]
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
 
 configurations {
   compileOnly {
@@ -207,7 +219,11 @@ configurations {
 apply from: "${rootDir}/cve-resolution-strategy.gradle"
 
 dependencies {
+
   compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
+  compile group: 'org.pitest', name: 'pitest', version: versions.pitest
+  compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.6'
+  compile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
@@ -227,9 +243,9 @@ dependencies {
 
   compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
 
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.1'
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.3'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.1'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.5'
   implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '10.1.0'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.5.0.RELEASE'
@@ -245,7 +261,7 @@ dependencies {
   implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
   implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.2'
   implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.3.0'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.8.1'
   implementation group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
   implementation group: 'commons-validator', name: 'commons-validator', version: '1.6'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.4'
@@ -257,14 +273,15 @@ dependencies {
 
 
 
-  implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.4.0'
-  implementation(group: 'org.postgresql', name: 'postgresql', version: '42.2.13') {
+  implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.8.0'
+  implementation(group: 'org.postgresql', name: 'postgresql', version: '42.3.3') {
     exclude(module: 'commons-logging')
     exclude(module: 'slf4j-simple')
   }
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
 
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
   testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
   testCompile group: 'org.testcontainers', name: 'postgresql', version: '1.15.1'
   testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.2.1.RELEASE'
@@ -291,11 +308,16 @@ dependencies {
 
   functionalTestAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
   functionalTestAnnotationProcessor group :'org.projectlombok', name:'lombok', version:'1.18.12'
+  functionalTestCompile("junit:junit:4.12")
+  functionalTestRuntime("org.junit.vintage:junit-vintage-engine:5.2.0")
   functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-cucumber', version: versions.serenityCucumber
   functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
   functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
   functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-screenplay', version: versions.serenity
+  functionalTestImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
+  functionalTestImplementation group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
   functionalTestImplementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   functionalTestImplementation group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: versions.reformLogging
   functionalTestImplementation group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
@@ -305,9 +327,6 @@ dependencies {
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
 
-  smokeTestImplementation sourceSets.main.runtimeClasspath
-  smokeTestImplementation sourceSets.test.runtimeClasspath
-  smokeTestAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
 mainClassName = 'uk.gov.hmcts.reform.refunds.RefundApplication'
@@ -325,10 +344,8 @@ bootJar {
 checkstyle {
   toolVersion "7.8.1"
 }
-checkstyleMain.enabled(false)
-checkstyleTest.enabled(false)
-checkstyleIntegrationTest.enabled(false)
 pmdTest.enabled(false);
+pmdFunctionalTest.enabled(false);
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
@@ -336,4 +353,27 @@ wrapper {
 
 serenity {
   reports = ["single-page-html"]
+}
+
+pitest {
+  targetClasses = ['uk.gov.hmcts.reform.refunds.filters.*',
+                   'uk.gov.hmcts.reform.refunds.service.*',
+                   'uk.gov.hmcts.reform.refunds.config.*',
+                   'uk.gov.hmcts.reform.refunds.controllers.*']
+  excludedClasses = ['uk.gov.hmcts.reform.refunds.state.*',
+                     'uk.gov.hmcts.reform.refunds.mappers.*']
+  historyInputLocation = 'build/reports/pitest/fastermutationtesting'
+  historyOutputLocation = 'build/reports/pitest/fastermutationtestingoutput'
+  threads = 15
+  testSourceSets = [sourceSets.test]
+  mainSourceSets = [sourceSets.main]
+  fileExtensionsToFilter.addAll('xml','json')
+  outputFormats = ['XML', 'HTML','CSV']
+  mutationThreshold = 9
+  coverageThreshold = 0
+  maxMutationsPerClass = 15
+  jvmArgs = ['-Xms1G','-Xmx3G']
+  timestampedReports = false
+  failWhenNoMutations = false
+  detectInlinedCode = true
 }
